2017.11/_sources/plugins/available/feature-table/filter-features.txt
filter-features: Filter features from table
===========================================

.. raw:: html

   <div class="tabbed">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#cli">Command line interface</a></li>
       <li><a data-toggle="tab" href="#api">Artifact API</a></li>
     </ul>
     <div class="tab-content">
       <div id="cli" class="tab-pane fade in active">
         <pre>Usage: qiime feature-table filter-features [OPTIONS]

     Filter features from table based on frequency and/or metadata. Any samples
     with a frequency of zero after feature filtering will also be removed. See
     the filtering tutorial on https://docs.qiime2.org for additional details.

   Options:
     --i-table PATH                  Artifact: FeatureTable[Frequency]
                                     [required]
                                     The feature table from which
                                     features should be filtered.
     --p-min-frequency INTEGER       [default: 0]
                                     The minimum total frequency
                                     that a feature must have to be retained.
     --p-max-frequency INTEGER       [optional]
                                     The maximum total frequency that
                                     a feature can have to be retained. If no
                                     value is provided this will default to
                                     infinity (i.e., no maximum frequency filter
                                     will be applied).
     --p-min-samples INTEGER         [default: 0]
                                     The minimum number of samples
                                     that a feature must be observed in to be
                                     retained.
     --p-max-samples INTEGER         [optional]
                                     The maximum number of samples
                                     that a feature can be observed in to be
                                     retained. If no value is provided this will
                                     default to infinity (i.e., no maximum sample
                                     filter will be applied).
     --m-metadata-file PATH          Metadata file or artifact viewable as
                                     metadata. This option may be supplied
                                     multiple times to merge metadata  [optional]
                                     Feature metadata used with `where` parameter
                                     when selecting features to retain, or with
                                     `exclude_ids` when selecting features to
                                     discard.
     --p-where TEXT                  [optional]
                                     SQLite WHERE clause specifying
                                     feature metadata criteria that must be met
                                     to be included in the filtered feature
                                     table. If not provided, all features in
                                     `metadata` that are also in the feature
                                     table will be retained.
     --p-exclude-ids / --p-no-exclude-ids
                                     [default: False]
                                     If true, the features
                                     selected by `metadata` or `where` parameters
                                     will be excluded from the filtered table
                                     instead of being retained.
     --o-filtered-table PATH         Artifact: FeatureTable[Frequency] [required
                                     if not passing --output-dir]
                                     The resulting
                                     feature table filtered by feature.
     --output-dir DIRECTORY          Output unspecified results to a directory
     --cmd-config PATH               Use config file for command options
     --verbose                       Display verbose output to stdout and/or
                                     stderr during execution of this action.
                                     [default: False]
     --quiet                         Silence output if execution is successful
                                     (silence is golden).  [default: False]
     --help                          Show this message and exit.</pre>
       </div>
       <div id="api" class="tab-pane fade">
         <pre>Filter features from table

   Filter features from table based on frequency and/or metadata. Any samples
   with a frequency of zero after feature filtering will also be removed. See
   the filtering tutorial on https://docs.qiime2.org for additional details.

   Parameters
   ----------
   table : FeatureTable[Frequency]
       The feature table from which features should be filtered.
   min_frequency : Int, optional
       The minimum total frequency that a feature must have to be retained.
   max_frequency : Int, optional
       The maximum total frequency that a feature can have to be retained. If
       no value is provided this will default to infinity (i.e., no maximum
       frequency filter will be applied).
   min_samples : Int, optional
       The minimum number of samples that a feature must be observed in to be
       retained.
   max_samples : Int, optional
       The maximum number of samples that a feature can be observed in to be
       retained. If no value is provided this will default to infinity (i.e.,
       no maximum sample filter will be applied).
   metadata : Metadata, optional
       Feature metadata used with `where` parameter when selecting features to
       retain, or with `exclude_ids` when selecting features to discard.
   where : Str, optional
       SQLite WHERE clause specifying feature metadata criteria that must be
       met to be included in the filtered feature table. If not provided, all
       features in `metadata` that are also in the feature table will be
       retained.
   exclude_ids : Bool, optional
       If true, the features selected by `metadata` or `where` parameters will
       be excluded from the filtered table instead of being retained.

   Returns
   -------
   filtered_table : FeatureTable[Frequency]
       The resulting feature table filtered by feature.</pre>
       </div>
     </div>
   </div>